--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nguyen Ha Hong Tuan</title>
     <link rel="stylesheet" href="./assests/css/style.css">
     <link rel="stylesheet" href="./assests/fonts/themify-icons/themify-icons.css">
 </head>
